[gd_scene load_steps=16 format=3 uid="uid://cim1786ru2uvs"]

[ext_resource type="Script" path="res://enemy scenes/1abilityenemiees/galbo/galbo.gd" id="1_84f38"]
[ext_resource type="Texture2D" uid="uid://cae2e4vhrcmwo" path="res://kirbySprites/enemy/galbo.png" id="1_vs5ic"]
[ext_resource type="PackedScene" uid="uid://bj3rabfwv1v4o" path="res://enemy scenes/1abilityenemiees/galbo/galboFlame.tscn" id="2_0refu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4xbf6"]
atlas = ExtResource("1_vs5ic")
region = Rect2(110, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_4th1a"]
atlas = ExtResource("1_vs5ic")
region = Rect2(22, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_om1yd"]
atlas = ExtResource("1_vs5ic")
region = Rect2(44, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ole13"]
atlas = ExtResource("1_vs5ic")
region = Rect2(66, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb6w8"]
atlas = ExtResource("1_vs5ic")
region = Rect2(132, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0rva"]
atlas = ExtResource("1_vs5ic")
region = Rect2(0, 0, 22, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_bj0of"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xbf6")
}],
"loop": true,
"name": &"awake",
"speed": 5.0
}, {
"frames": [{
"duration": 1.8,
"texture": SubResource("AtlasTexture_4th1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_om1yd")
}, {
"duration": 1.9,
"texture": SubResource("AtlasTexture_ole13")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb6w8")
}],
"loop": true,
"name": &"fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0rva")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2l7yt"]
size = Vector2(18, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vwkkv"]
size = Vector2(78, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_im5eo"]
size = Vector2(76.5, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hs1s"]
size = Vector2(122, 130.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ord4t"]
size = Vector2(163, 131)

[node name="galbo" type="CharacterBody2D" groups=["mobs", "suckable"]]
collision_layer = 2
script = ExtResource("1_84f38")
galboflame = ExtResource("2_0refu")

[node name="projectileProducer" type="Marker2D" parent="."]
position = Vector2(-10, 2)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_bj0of")
autoplay = "default"

[node name="collisionbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_2l7yt")
one_way_collision = true

[node name="playerDetect L" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetect L"]
position = Vector2(-43, 1)
shape = SubResource("RectangleShape2D_vwkkv")
debug_color = Color(0.478431, 0.580392, 0.282353, 0.419608)

[node name="playerDetect R" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetect R"]
position = Vector2(42.25, 1)
shape = SubResource("RectangleShape2D_im5eo")
debug_color = Color(0.862745, 0.172549, 0.772549, 0.419608)

[node name="fireRange" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="fireRange"]
position = Vector2(0, 0.75)
shape = SubResource("RectangleShape2D_4hs1s")
debug_color = Color(0.921569, 0.258824, 0.282353, 0.419608)

[node name="playerRange" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerRange"]
position = Vector2(-0.5, 1.5)
shape = SubResource("RectangleShape2D_ord4t")
debug_color = Color(0, 0.6, 0.701961, 0.0941176)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.23
autostart = true

[connection signal="body_entered" from="playerDetect L" to="." method="_on_player_detect_l_body_entered"]
[connection signal="body_entered" from="playerDetect R" to="." method="_on_player_detect_r_body_entered"]
[connection signal="body_entered" from="fireRange" to="." method="_on_fire_range_body_entered"]
[connection signal="body_exited" from="playerRange" to="." method="_on_player_range_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
